--- a/applications/jenkins/Dockerfile
+++ b/applications/jenkins/Dockerfile
@@ -1,4 +1,4 @@
-FROM jenkins/jenkins:2.136
+FROM jenkins/jenkins:latest
 USER root
 
 #Pre-Install Jenkins Plugins
@@ -20,4 +20,5 @@ apt-get update && apt-get install -y kubectl
 # Grant jenkins user group access to /var/run/docker.sock
 RUN addgroup --gid 1001 dsock
 RUN gpasswd -a jenkins dsock 
+RUN gpasswd -a jenkins docker 
 USER jenkins
