--- a/applications/hello-kenzan/k8s/manual-deployment.yaml
+++ b/applications/hello-kenzan/k8s/manual-deployment.yaml
@@ -23,6 +23,9 @@ metadata:
 spec:
   strategy:
     type: Recreate
+  selector:
+    matchLabels:
+      app: hello-kenzan    
   template:
     metadata:
       labels:
