--- a/applications/socat/Dockerfile
+++ b/applications/socat/Dockerfile
@@ -1,4 +1,7 @@
 FROM alpine:latest
+ARG http_proxy
+ARG https_proxy
+
 #USER root
 #Installing socat
 RUN apk update && apk upgrade && apk add bash socat
